# rss_read_and_feed

./: .gitignore  README.md  dev-requirements.txt  main.py  pyproject.toml
src/rss_read_and_feed/: content_parser.py  feed_builder.py  feed_converter.py  feed_strategy.py  parser_factory.py
src/rss_read_and_feed/dto/: feed_item.py
src/rss_read_and_feed/dto/enums/: video_type.py
src/rss_read_and_feed/enums/: parser.py
src/rss_read_and_feed/utils/: singleton_meta.py
tests/unit/builder/: test_feed_builder.py
tests/unit/dto/enums/: test_video_type.py
tests/unit/parser/: test_file_parser.py
tests/unit/settings/: test_parser_settings.py
tests/unit/utils/: test_singleton_meta.py
