[project]
name = "rss_read_and_feed"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-config --strict-markers --maxfail=1 --cov-branch  --cov=src --cov-report=term-missing:skip-covered --cov-report=xml"

[tool.mypy]
mypy_path = "src"


[tool.coverage.run]
branch = true
source = ["src"]
parallel = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.mutmut]
paths_to_mutate = ["src"]
tests_dir = ["tests"]
runner = "python -m pytest -q"
use_coverage = true
dict_synonyms = ["dict"]
backup = false

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"rss_read_and_feed" = ["py.typed"]
